src/scss/3-layout/_siteMainContent.scss
// ======================
// SITE MAIN CONTENT
// ======================

// ----------------------
// Hero
// ----------------------

// -------- Section Div --------

// Padding on screens Lg+
.sm--hero {
  padding-top: 15rem; // Move section content down
  padding-bottom: 10rem; // Move section content down
  transition: $transition-smooth-normal;
  position: relative;
}

@media (min-width: $breakpoint-lg) {
  .sm--hero {
    padding-top: 25rem; // Move section content down
    padding-bottom: 25rem; // Move section content down
  }
}

// -------- Background SVG --------

.sm--hero__background-svg {
  position: absolute;
  width: 2000px;
  height: 1393px;
  top: -300px;
  left: -250px;
  z-index: assign-Z-Index(base); // Lowest
  transition: $transition-smooth-normal; //Add smooth transition
}

// Position Lg+
@media (min-width: $breakpoint-lg) {
  .sm--hero__background-svg {
    left: 50px;
  }
}

// -------- Hero Text Content--------
.sm--hero__text-content {
  text-align: center;
  transition: $transition-smooth-normal;

  // Header
  .sm--hero__header {
    font-weight: $font-bold;
    font-size: 3.5rem;
    line-height: 3.5rem;
    text-transform: uppercase;
    color: white;
  }
  // Subheader
  .sm--hero__subheader {
    padding: 1rem 0;
    font-weight: $font-light;
    font-size: 1.25rem;
    line-height: 1.25rem;
    text-transform: none;
    color: white;
  }

  // Button - "Get Started Free →"
  .sm--hero__button {
    background: $secondary;
    box-shadow: $shadow;
    transition: $transition-smooth-normal;
    margin-top: 0.5rem;
    margin-bottom: 0.5rem;

    // Hover Effects
    &:hover {
      background: $secondary-hover;
      transform: $transform-scale;
    }
  }
}

// Hero Header Text on screens Lg+
@media (min-width: $breakpoint-lg) {
  .sm--hero__text-content {
    margin-left: 10rem;
    text-align: left;
    // Header
    .sm--hero__header {
      font-weight: $font-bold;
      font-size: 3.5rem;
      line-height: 3.5rem;
      text-transform: uppercase;
      color: white;
    }
    // Subheader
    .sm--hero__subheader {
      padding: 1rem 0;
      font-weight: $font-light;
      font-size: 1.25rem;
      line-height: 1.25rem;
      text-transform: none;
      color: white;
    }

    // Button - "Get Started Free →"
    .sm--hero__button {
      background: $secondary;
      box-shadow: $shadow;
      transition: $transition-smooth-normal;
      margin-top: 0.5rem;
      margin-bottom: 0.5rem;

      // Hover Effects
      &:hover {
        background: $secondary-hover;
        transform: $transform-scale;
      }
    }
  }
}

// -------- Hero Image - Computer --------

.sm--hero__image-computer {
  // position: relative;
  transition: $transition-smooth-normal;
  width: 450px;
  height: auto;
}

@media (min-width: $breakpoint-lg) {
  .sm--hero__image-computer {
    position: absolute;
    top: -250px;
    z-index: -497;
    width: 1250px;
  }
}

// ----------------------
// Features
// ----------------------

// -------- Section Div --------
.sm--features {
  padding-top: 1rem; // Move section content down
  padding-bottom: 1rem; // Move section content down
  transition: $transition-smooth-normal;
  position: relative;
}

// -------- Feature Cards --------
.sm--features__feature-card {
  margin-top: 1rem;
  border: none;
  height: 300px;
  transition: $transition-smooth-fast;

  .sm--features__feature-card-hover-indicator {
    height: 8px;
    width: 100%;
    background: none;
    transition: $transition-smooth-normal;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
    border-bottom-right-radius: 0.25rem;
    border-bottom-left-radius: 0.25rem;
  }

  &:hover {
    box-shadow: $shadow;
    transform: $transform-scale;

    .sm--features__feature-card-hover-indicator {
      background: $primary;
    }
  }
}

// Adjust card height on screens Md+
@media (min-width: $breakpoint-md) {
  .sm--features__feature-card {
    height: 355px;
  }
}

// ----------------------
// Benefits
// ----------------------

// -------- Section Div --------
.sm--benefits {
  margin: 2rem auto;
}

// -------- Background SVG --------

.sm--benefits__background-svg {
  position: absolute;
  top: 2600px;
  width: 1000px;
  height: auto;
  z-index: assign-Z-Index(base); // Lowest
  transition: $transition-smooth-normal; //Add smooth transition
}

// Position Md - LG
@media (min-width: $breakpoint-md) and (max-width: $breakpoint-lg - 1) {
  .sm--benefits__background-svg {
    width: 1000px;
    height: auto;
    top: 1925px;
    left: 150px;
  }
}

// Position Lg - Xl
@media (min-width: $breakpoint-lg) and (max-width: $breakpoint-xl - 1) {
  .sm--benefits__background-svg {
    width: 1100px;
    height: auto;
    top: 1500px;
    left: 575px;
  }
}

// Position Xl+
@media (min-width: $breakpoint-xl) {
  .sm--benefits__background-svg {
    width: 1100px;
    height: auto;
    top: 1400px;
    left: 830px;
  }
}

// -------- Benefit Figures --------
.sm--benefits__figures {
  margin: 2rem auto;

  .sm--benefits__figure {
    margin: 0.75rem auto;
  }

  // Spacing for each figure's sub-block
  div div {
    margin: auto 0.5rem;

    // Spacing for text in figure sub-blocks
    p {
      margin: 0;
    }
  }

  // Add gradient and font styling
  .sm--benefits__figure-number {
    font-weight: bold;
    font-size: 3rem;
    background: linear-gradient(to right, $primary 0%, $secondary 100%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
  }
}

// -------- Benefit Cards Layout --------
.sm--benefits__benefit-cards {
  .col-12,
  .col-md-6 {
    padding: 0;
  }
}
/* ... */

